--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>My first webpage</h1>
+    <a href="second.html" style="align-content: center;">Click here</a>
 </body>
 </html>
