added google.com in index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>My first webpage</h1>
     <a href="second.html" style="align-content: center;">Click here</a>
+    <a href="https//:google.com"></a>
 </body>
 </html>
